# client-pr

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: client.hpp  data_objects.hpp  query_tables.hpp  query_to_json.hpp  tables.hpp
src/: client.cpp  data_objects.cpp  query_to_json.cpp  tables.cpp
tests/: parameterise_description.hpp  records.hpp  test_data_objects.cpp  test_tables.cpp
